Update platform version to 2026.1 (#14)
* Update platform version to 2026.1

* Fix test failures

* Fix plugin version configuration

* Add Gateway 2026.1 compatibility fixes

* Update changelog and version for 0.0.3 release